Improved support of I18n.

--- a/app/views/gift_cards/new.html.erb
+++ b/app/views/gift_cards/new.html.erb
@@ -11,7 +11,7 @@
     <%= f.text_field :email %>
   <% end %>
   <%= f.field_container :name do %>
-    <%= f.label :name, t("name") %> <span class="required">*</span><br />
+    <%= f.label :name, t("recipient_name") %> <span class="required">*</span><br />
     <%= f.text_field :name %>
   <% end %>
   <%= f.field_container :note do %>
